Fix store navigation breaks on sidebar height increase

--- a/scss/modules/_sidebar.scss
+++ b/scss/modules/_sidebar.scss
@@ -134,6 +134,8 @@ ul .sidebar-messages {
       display: block;
       text-decoration: none !important;
       color: $sidebar-wrapper-color;
+	  white-space: nowrap;
+	  
       @if ($smooth-hover == true) {
         @include transition (color 250ms ease);
       }
